2012-07-31  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* configure.in, digipeater.c, aprx.h, valgrind.c:
	    Supply implementation of memrchr() if the platform does not have it.
	    (GNU Libc extension, not a standard POSIX thing.)

	* Makefile.in:
	    Fixing details around how to run "make make-deb".
	    Fixing how SVNVERSION is determined.

	* interface.c, igate.c, aprx.h:
	    rflog() parameter set modification, show directly at calls if
	    the logged item is 'R' or 'T'.

	* dupecheck.c, aprsis.c, igate.c, aprx.h, digipeater.c:
	    Prepare for the duplicate checker to be able to control the time
	    window of the duplicate checks - minimum will be 30 seconds, maximum
	    can be higher.

	* digipeater.c:
	    TNC2 format quirks in "VIA field" data caused missed identification
	    of "ping pong relay" - where a packet contains this node's transmitter
	    callsign, and this node has logged its address as "sent through me".
	    Also known as TRACE mode:
	        SRC>DEST,MYTRANS,OTHERTX*,WIDE3-1

2012-07-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* keyhash.c, keyhash.h, netax25.c, netresolver.c, interface.c,
	  cellmalloc.c, config.c, dprsgw.c, ax25.c:
	    A compiler test with -Wall complained a bit around missing ANSI-C
	    prototypes.

2012-07-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* keyhash.c, filter.c:
	    Threw away the long unused CRC32 stuff, and added a hashkeyuc()
	    function.  Fixed the way how  filter_entrycall_*() and
	    filter_wx_*() functions processed the key. Now both of
	    them store keys as converted to upper case, and lookup
	    with mixed case.

	* aprx-config.xsd:
	    An attempt at writing a "formal" configuration file syntax
	    description.  It is really not XML that config file, nor
	    can XSD define it clearly, I think..

2012-07-28  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 2.04

	* filter.c: