@@ -1,3 +1,9 @@
+2012-08-04  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
+
+	* interface.c:
+	    Config parser bug in defining multiple <kiss-subif ..>.
+	    Thanks to N2PYI for report.
+
 2012-07-31  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* configure.in, digipeater.c, aprx.h, valgrind.c:
